# iPlug2OOS

./: CLAUDE.md  CMakeLists.txt  common-mac.xcconfig  common-win.props
TemplateProject/: CMakeLists.txt
TemplateProject/projects/: TemplateProject-aax.vcxproj  TemplateProject-app.vcxproj  TemplateProject-clap.vcxproj  TemplateProject-vst2.vcxproj  TemplateProject-vst3.vcxproj
TemplateProject/scripts/: postbuild-win.bat
